Fix sidebar alignment

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem 0;
-  padding: 1rem 0;
 
   color: #fff;
 }
@@ -56,6 +55,6 @@
   .sidebar-container {
     position: sticky;
     top: 1.5rem;
-    width: 20rem;
+    width: 15rem;
   }
 }
